check slack token

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,6 @@ github:
   token: <personal access token with scopes [read:org, repo]>
   orgName: cahcommercial
   teamName: <your team name ex: "Squid Squad">
+
+slack:
+  token: <slash command token>
